<resources>
<string name="menu_settings">Settings</string>
<string name="welcome">أهلاً بكم في تطبيق أحباب</string>
<string name="searchResult">نتيجة البحث</string>
<string name="app_name">أساور</string>
<string name="search">البحث</string>
<string name="login">تسجيل الدخول</string>
<string name="logout">خروج</string>
<string name="register">التسجيل</string>
<string name="male">ذكر</string>
<string name="female">أنثى</string>
<string name="pickOne">إختر واحداً</string>
<string name="or">أو</string>
<string name="userName">إسم المستخدم</string>
<string name="password">كلمة السر</string>
<string name="email">البريد</string>
<string name="fullName">الإسم الكامل</string>
<string name="sex">الجنس</string>
<string name="familyStatus">الوضع العائلي</string>
<string name="eyesColor">لون العين</string>
<string name="hairColor">لون الشعر</string>
<string name="height">الطول</string>
<string name="weight">الوزن</string>
<string name="goalFromSite">الهدف من الموقع</string>
<string name="age">العمر</string>
<string name="educationLevel">المستوى العلمي</string>
<string name="originCountry">بلد الأصل</string>
<string name="residenceCountry">بلد السكن</string>
<string name="job">الوظيفة</string>
<string name="selfDescription">أوصف نفسك</string>
<string name="partnerDescription">أوصف الشريك</string>
<string name="timeZone">توقيت</string>
<string name="contactTime">الوقت للإتصال</string>
<string name="contactWays">طرق التواصل</string>
<string name="uploadPhotos">تحميل الصور</string>
<string name="pressHere">إضغط هنا</string>
<string name="termsAndConditions">إنني قد قرأت ووافقت على سياسة الخصوصية بالإضافة إلى شروط الإستخدام المنصوصة داخل هذا الموقع</string>
<string name="whoAreWeTitle">من نحن</string>
<string name="inbox">الوارد</string>
<string name="outbox">الصادر</string>
<string name="sender">المرسل</string>
<string name="subject">الموضوع</string>
<string name="body">الرسالة</string>
<string name="phoneNumber">رقم الهاتف</string>
<string name="lastOnline">آخر تواجد في الموقع</string>
<string name="update">تحديث</string>
<string name="contactUs">اتصل بنا</string>
<string name="send">إرسال</string>
<string name="message">مراسلة</string>
<string name="block">أضف إلى لائحة المنع</string>
<string name="sendInterest">أرسل إعجاب</string>
<string name="delete">حذف</string>
<string name="VisitCountTo">عدد زوار البيانات</string>
<string name="BlocksTo">لائحة المنع</string>
<string name="BlocksFrom">عدد الملفات الممنوعة</string>
<string name="InterestsTo">عدد المعجبين</string>
<string name="InterestsFrom">عدد الإعجابات</string>
<string name="nextBtnLabel">التالي</string>
<string name="prevBtnLabel">السابق</string>
<string name="subscribe">إشترك</string>
<string name="whoAreWeBody">
    موقع أحباب هو موقع متخصص للتعارف والتواصل والزواج كما هو متخصص أيضا في زواج المسيار والتعارف على أصدقاء جدد وثقافات جديدة.

    .يمكنك التعارف على اصدقاء من بلدك كما في بلدان اخرى عبر العالم
  </string>
<string name="termsAndConditionTitle">شروط الإستخدام</string>
<string name="termsAndConditionsBody">
    موقع احباب للتعارف والزواج يرغب بكم

    ان ادارة موقغ احباب يرحب بكم ويتمنى لكم كل التوفيق في الموقع ولذلك الرجاء قراءة شروط الاستخدام وتحذيرات الامان قبل التسجيل والرجا العمل بها بكل دقة
    يجب أن لا يكون عمر المشترك أقل من 18 سنة.

    للأعضاء الحق فى انهاء عضويتهم فى اى وقت كما يحق لموقع احباب أن تقوم بالغاء عضوية أى عضو دون الرجوع اليه,كما أنه اذا بدر من العضو أى مخالفة لشروط العضوية يتم انهاء عضويته

    يحق لموقع احباب ايقاف اى عضو يتعدى على الموقع باى شكل من الاشكال سواء كتابيا او لفظيا

    يحق لموقع احباب ايقاف اى عضو يتعدى على اى مشترك داخل موقع احباب بالفاظ خارجه عن العرف

    ادارة الموقع لا تقوم باعطاء اية معلومات عن اي مشترك لاي شخص كان او لاي جهة كانت مهما كانت الاسباب والظروف

    الموقع لا يقوم بالتاكد من المشاركين او المشاركات في الموقع ولا من عنواينهم ولا ارقامهم لذلك ننصحكم بالتاكد مع الشخص اللذي تتحدثون معه بانفسكم

    ادارة الموقع لا تقوم اطلاقا بمراقبة الرسائل المتبادله بين المشاركين لاننا نعتبر انها امور خاصة لا نسمح لاي من مشرفينا او موظفينا بالاطلاع عليها ولكن فقط في حال وجود اي شكوى من الرسايل بانها تخالف شروط الموقع يقوم فريق الموقع بالدخول الى الرسائل ومراقبتها

    الموقع للاستخدام الشخصى فقط وغير مسموح باستخدام الموقع تجارياً من قبل الأعضاء بأى صورة كانت ومن يفعل ذلك يعرض نفسه للمساءلة القانونية مع انهاء عضويته

    للموقع الحق فى تعديل أو الغاء اى معلومات موجودة فى الموقع بما فى ذلك البيانات التى يقوم الاعضاء بادخالها والتى قد لاتتناسب مع لوائح العمل فى الموقع او غير متفقة مع القيم والتقاليد أو تدعوا الى الكراهية أو اتجاهات فكرية أو سياسية أو تحتوى على معلومات دعائية أو تجارية او عناوين مواقع او بريد اليكترونى

    لن تتم الموافقة على اى طلب للتواصل فى حالة ان ملف البيانات للعضو غير مكتمل

    عدم ارسال اي مبلغ مادي الى اي مشارك مهما كانت الاسباب والظروف

    عدم اعطاء اي مشارك اخر عنوان سكنكم الاصلي وذلك قبل التاكد من الشخص المقابل قبل التاكد من نواياه وهدفه

    عدم اعطاء ايه تفاصيل عن حساباتكم المصرفية من حسابات عادية او بطاقات ائتمانية وعدم اعطاء ايه ارقام سرية او ارقام دخول الى اي احد في الموقع

    يمنع تماما  رفع اى صوره غير الصور الشخصية للاعضاء الذكور كما يمنع رفع صور المشاهير

    يمنع استخدام الاسماء والعبارات المخلة بالاداب . مثل ( مثير - حار جدا - اعشق النساء )

    يمنع رفع الصوره الفاضحه، سواء صور شخصية او صور من الانترنت . الصور فقط عباره عن صور عادية متحشمة

    الموقع غير مسؤول عن أي نتائج سلبيه لاى تعارف خارج الموقع من خلال البريد او التليفون

    الموقع غير مسؤل عن اى نتائج تترب على افصاحك عن بياناتك الخاصه لاى مشترك فى الموقع

    الموقع غير مسؤل عن اى نتائج سلبيه لوضع صور البنات الراغبات فى الزواج من خلال الموقع

    يمكن لاى مشترك التقدم ببلاغ عن اى شخص مخالف داخل الموقع او شخص هدفه التسلية

  </string>
<string name="securityPolicyTitle">تحذيرات الأمان</string>
<string name="securityPolicyBody">
    ان ادارة موقع احباب هي ادارة مستقلة ولا يتبع لنا اي موقع اخر لا من قريب ولا من بعيد كما وانه لدبنا فريق عمل يعمل بشكل متواصل لمدة 24 ساعة يوميا

    لذلك تتوجه ادارة موقع احباب الى مشاركينا بتحذيرات الامان ونامل منكم التقيد بها

    عدم ارسال اي مبلغ مالي لاي مشترك تتعرفون عليه في الموقع مهما كانت الاسباب والظروف

    عدم اعطاء اي شخص تتعرفون عليه في الموقع اي معلومات عن حساباتكم المالية او ارقام حسابات او اي معلومات عن بطاقات الائتمان

    عدم اعطاء اي معلومات خاصة لاي مشترك تتعرفون عليه في الموقع معلومات عن حياتكم الخاصة او عملكم او حساباتكم

    عدم اعطاء اي مشترك تتعرفون عليه في الموقع اي معلومات عن حساباتكم في الموقع او اي موقع اخر او اعطاء اي اسم مستخدم اوكلمة السر لاي كان

    بتم ايقاف المشترك بدون سابق انذار فى حالة كتابة الاسم الظاهر على الموقع بشكل غير لائق او يحتوى على وسيلة اتصال او كلمة خارجة او معنى غير الاسماء المتعارف عليها

    الموقع غير مسؤل عن اى نتائج سلبيه لوضع صور البنات الراغبات فى الزواج من خلال الموقع

    الموقع غير مسؤل عن اى نتائج سلبيه لاى تعارف خارج الموقع من خلال البريد او التليفون

    يحق لموقع احباب ايقاف اى عضو يتعدى على الموقع باى شكل من الاشكال سواء كتابيا او لفظيا

    يحق لادارة موقع احباب تغيير او تبديل شروط الاستخدام او تحذيرات الامان في اي وقت تراه الادارة مناسب


    يمكنكم دائما مراسلة ادارة الموقع وعلى مدار الساعة عبر
    info@ahbaab.com
  </string>
<string name="privacyPolicyTitle">سياسة الخصوصية</string>
</resources>