<android.support.v4.widget.NestedScrollView android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:textDirection="rtl" android:layoutDirection="rtl" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"><android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtInputLayoutUser"><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtUser" android:hint="@string/userName" android:background="@drawable/edit_text_style" android:textColor="#000" android:textColorHint="#000" android:inputType="textPersonName" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="50dp" android:gravity="right" /></android.support.design.widget.TextInputLayout><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/sex" android:id="@+id/txtSearchSex" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="5dp" android:gravity="right" android:textColor="#000" android:layoutDirection="rtl" android:textSize="10dp" /><RadioGroup android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:id="@+id/rdgSearchSex" android:gravity="right" android:orientation="horizontal"><RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/male" android:id="@+id/rdbSearchMale" android:textColor="#000" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="5dp" android:gravity="right" android:layoutDirection="rtl" android:layout_gravity="right" android:textSize="10dp" /><RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/female" android:id="@+id/rdbSearchFemale" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="5dp" android:gravity="right" android:layoutDirection="rtl" android:layout_gravity="right" android:textSize="10dp" android:textColor="#000" /></RadioGroup><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/goalFromSite" android:id="@+id/txtSearchGoalFromSite" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="5dp" android:gravity="right" android:layoutDirection="rtl" android:textSize="10dp" android:textColor="#000" android:drawableTop="#000" /><Spinner android:layout_height="30dp" android:layout_width="match_parent" android:id="@+id/goalFromSiteSpinner" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:gravity="center_horizontal" android:prompt="@string/goalFromSite" style="@style/spinner_style" android:layoutDirection="rtl" android:textDirection="rtl" /><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/originCountry" android:id="@+id/txtSearchOriginCountry" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="10dp" android:gravity="right" android:textColor="#000" android:layoutDirection="rtl" android:textSize="10dp" /><Spinner android:layout_height="30dp" android:layout_width="match_parent" android:id="@+id/searchOriginCountrySpinner" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="0dp" android:gravity="right" android:prompt="@string/originCountry" style="@style/spinner_style" android:layoutDirection="rtl" android:textDirection="rtl" /><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/residenceCountry" android:id="@+id/txtSearchResidenceCountry" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="10dp" android:gravity="right" android:textColor="#000" android:layoutDirection="rtl" android:textSize="10dp" /><Spinner android:layout_height="30dp" android:layout_width="match_parent" android:id="@+id/searchResidentCountrySpinner" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="0dp" android:gravity="right" android:prompt="@string/residenceCountry" style="@style/spinner_style" android:textDirection="rtl" android:layoutDirection="rtl" /><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/familyStatus" android:id="@+id/txtSearchStatus" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="10dp" android:gravity="right" android:textColor="#000" android:layoutDirection="rtl" android:textSize="10dp" /><Spinner android:layout_height="30dp" android:layout_width="match_parent" android:id="@+id/searchStatusSpinner" android:prompt="@string/familyStatus" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="0dp" android:gravity="center" android:layoutDirection="rtl" style="@style/spinner_style" /><TextView android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/age" android:id="@+id/txtSearchAge" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="10dp" android:gravity="right" android:textColor="#000" android:layoutDirection="rtl" android:textSize="10dp" android:layout_marginBottom="0dp" /><Spinner android:layout_height="30dp" android:layout_width="match_parent" android:id="@+id/searchAgeSpinner" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:gravity="right" android:prompt="@string/age" android:layout_marginTop="0dp" style="@style/spinner_style" android:textDirection="rtl" android:layoutDirection="rtl" /><Button android:layout_weight="1" android:layout_height="0dp" android:layout_width="match_parent" android:text="@string/search" android:id="@+id/btnSearch" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginTop="5dp" /></LinearLayout></android.support.v4.widget.NestedScrollView>