<android.support.design.widget.CoordinatorLayout android:background="#FFFFFF" android:minWidth="300dp" android:minHeight="400dp" android:layout_height="400dp" android:textDirection="rtl" android:layoutDirection="rtl" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="16dp"><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical" android:layout_centerInParent="true"><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_marginRight="20dp" android:layout_marginLeft="20dp" /><android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtInputLayoutUserName" app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout" android:layout_marginTop="20dp"><android.support.design.widget.TextInputEditText android:id="@+id/txtDialogUserName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/userName" android:background="@drawable/edit_text_style" android:gravity="right" /></android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtInputLayoutPassword" android:layout_below="@id/txtInputLayoutUserName" app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout" android:layout_marginTop="20dp"><android.support.design.widget.TextInputEditText android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtDialogPassword" android:background="@drawable/edit_text_style" android:hint="@string/password" android:textColorHint="#000" /></android.support.design.widget.TextInputLayout><Button android:layout_below="@id/txtInputLayoutPassword" android:layout_marginTop="10dp" android:text="@string/login" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnDialogRegister" android:textSize="20dp" android:textStyle="bold" android:paddingTop="2dp" android:background="@drawable/dialogbuttonsigninstyle" android:textColor="@drawable/signindialogbuttontextcolor" /></LinearLayout></RelativeLayout></android.support.design.widget.CoordinatorLayout>