<android.support.v4.widget.DrawerLayout android:id="@+id/drawer_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fitsSystemWindows="true" android:textDirection="rtl" android:layoutDirection="rtl" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"><android.support.design.widget.CoordinatorLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="rtl" android:textDirection="rtl"><android.support.design.widget.AppBarLayout android:id="@+id/appbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"><android.support.v7.widget.Toolbar android:id="@+id/toolBar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:background="?attr/colorPrimary" android:layoutDirection="rtl" app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" app:layout_scrollFlags="scroll|enterAlways" /></android.support.design.widget.AppBarLayout><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@drawable/bg" android:minWidth="25dp" android:minHeight="25dp" android:paddingTop="30dp"><RelativeLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="70"><ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="102dp" android:contentDescription="@string/app_name" android:src="@drawable/logo" /></RelativeLayout><Button android:text="@string/login" android:layout_width="match_parent" android:layout_weight="10" android:layout_height="0dp" android:id="@+id/btnLogin" android:background="@drawable/buttonsigninstyle" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:textSize="22sp" android:textColor="@drawable/main_signin_button_text" /><Button android:text="@string/register" android:layout_width="match_parent" android:layout_weight="10" android:layout_height="0dp" android:id="@+id/btnRegister" android:background="@android:color/transparent" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:textSize="22sp" android:textColor="#FFFFFF" /></LinearLayout></android.support.design.widget.CoordinatorLayout><android.support.design.widget.NavigationView android:id="@+id/nav_view" android:layout_height="match_parent" android:layout_width="325dp" android:layout_gravity="start" android:fitsSystemWindows="true" app:headerLayout="@layout/nav_header" app:menu="@menu/main_drawer_view" android:textDirection="rtl" android:layoutDirection="rtl" /></android.support.v4.widget.DrawerLayout>