<android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" android:background="#DFDEE0" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="#FFFFFF" android:layout_margin="20dp" android:paddingTop="20dp" android:paddingLeft="10dp" android:paddingRight="10dp"><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal"><android.support.v7.widget.CardView android:id="@+id/visitCountToCardView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="1dp"><LinearLayout style="@style/Widget.CardContent" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/views" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VisitCountTo" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/visitCountTo" android:textAppearance="@style/TextAppearance.AppCompat.Title" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="13sp" app:autoSizeMaxTextSize="15sp" app:autoSizeStepGranularity="1sp" android:text="" /></LinearLayout></android.support.v7.widget.CardView></LinearLayout><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:id="@+id/blocksLayout" android:weightSum="2"><android.support.v7.widget.CardView android:id="@+id/interestsFromCardView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="1dp" android:layout_marginBottom="1dp"><LinearLayout style="@style/Widget.CardContent" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/likes" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InterestsFrom" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/interestsFrom" android:textAppearance="@style/TextAppearance.AppCompat.Title" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="13sp" app:autoSizeMaxTextSize="15sp" app:autoSizeStepGranularity="1sp" android:text="" /></LinearLayout></android.support.v7.widget.CardView><android.support.v7.widget.CardView android:id="@+id/interestsToCardView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="1dp"><LinearLayout style="@style/Widget.CardContent" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/lovers" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InterestsTo" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/interestsTo" android:textAppearance="@style/TextAppearance.AppCompat.Title" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="13sp" app:autoSizeMaxTextSize="15sp" app:autoSizeStepGranularity="1sp" android:text="" /></LinearLayout></android.support.v7.widget.CardView></LinearLayout><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:id="@+id/blocksLayout" android:weightSum="2"><android.support.v7.widget.CardView android:id="@+id/blocksToCardView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginLeft="1dp" android:layout_marginBottom="1dp"><LinearLayout style="@style/Widget.CardContent" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/block" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BlocksTo" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/blocksTo" android:textAppearance="@style/TextAppearance.AppCompat.Title" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="13sp" app:autoSizeMaxTextSize="15sp" app:autoSizeStepGranularity="1sp" android:text="" /></LinearLayout></android.support.v7.widget.CardView><android.support.v7.widget.CardView android:id="@+id/blocksFromCardView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginBottom="1dp"><LinearLayout style="@style/Widget.CardContent" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center"><ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/blockfiles" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BlocksFrom" /><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/blocksFrom" android:textAppearance="@style/TextAppearance.AppCompat.Title" app:autoSizeTextType="uniform" app:autoSizeMinTextSize="13sp" app:autoSizeMaxTextSize="15sp" app:autoSizeStepGranularity="1sp" android:text="" /></LinearLayout></android.support.v7.widget.CardView></LinearLayout></LinearLayout></android.support.v4.widget.NestedScrollView>