<RelativeLayout android:id="@+id/root_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@android:color/background_light" android:fitsSystemWindows="true" android:layoutDirection="rtl" android:textDirection="rtl" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><android.support.design.widget.CoordinatorLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="rtl" android:textDirection="rtl"><android.support.design.widget.AppBarLayout android:id="@+id/appbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"><android.support.v7.widget.Toolbar android:id="@+id/toolBar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:background="?attr/colorPrimary" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_scrollFlags="scroll|enterAlways" /></android.support.design.widget.AppBarLayout><LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:layout_marginTop="60dp"><android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout" android:id="@+id/txtInputLayoutSubject" android:layout_marginBottom="10dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"><EditText android:id="@+id/txtDialogSubject" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/edit_text_style" android:hint="@string/subject" /></android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="10dp" android:id="@+id/txtInputLayoutBody" android:layout_below="@id/txtInputLayoutSubject"><EditText android:id="@+id/txtDialogBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:background="@drawable/edit_text_style" android:hint="@string/body" android:textColor="#000" android:textColorHint="#000" android:inputType="textMultiLine" android:lines="10" /></android.support.design.widget.TextInputLayout><LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:orientation="vertical"><LinearLayout android:id="@+id/linearLayoutPlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"><SeekBar android:id="@+id/seekBar" android:layout_width="0dp" android:layout_weight="5" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layoutDirection="ltr" android:textDirection="ltr" /><Chronometer android:id="@+id/chronometerTimer" android:layout_width="0dp" android:layout_weight="2" android:layout_height="wrap_content" android:textSize="25sp" android:textColor="@android:color/darker_gray" android:layout_gravity="center_horizontal" /><android.support.design.widget.FloatingActionButton android:id="@+id/imageViewPlay" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:visibility="invisible" android:backgroundTint="@color/primaryColor" android:focusable="true" android:src="@drawable/baseline_play_arrow_24" /></LinearLayout><LinearLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_gravity="bottom" android:weightSum="4" android:orientation="horizontal"><Button android:text="@string/send" android:layout_width="0dp" android:layout_weight="3" android:layout_gravity="bottom" android:layout_height="wrap_content" android:id="@+id/btnSend" android:background="@drawable/dialogbuttonsigninstyle" android:textColor="@drawable/signindialogbuttontextcolor" android:textSize="22sp" android:gravity="center" android:layout_marginLeft="20dp" /><android.support.design.widget.FloatingActionButton android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:layout_gravity="bottom" android:id="@+id/btnRecord" android:layout_centerHorizontal="true" android:src="@drawable/baseline_mic_white_18" app:backgroundTint="#FF0000" android:clickable="true" /></LinearLayout></LinearLayout></LinearLayout></android.support.design.widget.CoordinatorLayout></RelativeLayout>